--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
